--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Client</title>
+		<title>FxrCalculator</title>
 		<base href="/">
 		<link rel="stylesheet" type="text/css" href="https://bootswatch.com/lumen/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
